# tanaka

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
Cmake/: AddTestExecutable.cmake  SetTargetDefaults.cmake
Source/: CMakeLists.txt  MediaRecorder.cc  MediaRecorder.h  VideoPipeline.cc  VideoPipeline.h  lolol.cc  lolol.h
Source/Models/: EncodedVideoFrame.h  MediaSettings.h  PixelBuffer.h  VideoBuffer.h  VideoFormat.h  VideoFrame.h  VideoPipeline.h
Source/Muxers/: FfmpegMp4Muxer.cc  FfmpegMp4Muxer.h  IMuxer.h
Source/Outputs/: FileOutput.cc  FileOutput.h  IOutput.h
Source/VideoEncoders/: DoNothingVideoEncoder.cc  DoNothingVideoEncoder.h  IVideoEncoder.h
Source/VideoProcessors/: DoNothingVideoProcessor.cc  DoNothingVideoProcessor.h  IVideoProcessor.h
Source/VideoSources/: IVideoFrameSource.h  IVideoSource.h  VideoFrame.h  WgcVideoSource.cc  WgcVideoSource.h
Tests/: CMakeLists.txt  TestMediaRecorder.cc  testlolol.cc
Tests/VideoSources/: TestWgcVideoSource.cc
